--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "tq-yate",
   "description": "TQ-yate - forked from YATE",
-  "version": "0.10.2",
+  "version": "0.10.3",
   "main": "src/main.js",
   "license": "MIT",
   "author": {
-      "name": "Patrick Doyle",
-      "email": "pdoyle@topquadrant.com",
-      "web": "http://www.topquadrant.com"
-    },
+    "name": "Patrick Doyle",
+    "email": "pdoyle@topquadrant.com",
+    "web": "http://www.topquadrant.com"
+  },
   "scripts": {
     "dev": "gulp serve",
     "build": "gulp",
@@ -19,36 +19,35 @@
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
-    "browserify": "^16.5.0",
-    "browserify-shim": "^3.8.12",
-    "browserify-transform-tools": "^1.6.0",
-    "exorcist": "^0.4.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-bump": "^2.2.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^4.2.0",
-    "gulp-cssimport": "^3.1.0",
-    "gulp-cssnano": "^2.1.2",
+    "browserify": "^17.0.0",
+    "browserify-shim": "^3.8.16",
+    "browserify-transform-tools": "^1.7.0",
+    "exorcist": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-bump": "^3.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
+    "gulp-cssimport": "^7.0.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-embedlr": "^0.5.2",
-    "gulp-filter": "^4.0.0",
-    "gulp-git": "^2.4.1",
-    "gulp-jsvalidate": "^2.1.0",
+    "gulp-filter": "^8.0.0",
+    "gulp-git": "^2.10.1",
+    "gulp-jsvalidate": "^5.0.0",
     "gulp-livereload": "^4.0.2",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-streamify": "1.0.2",
-    "gulp-tag-version": "^1.3.0",
-    "gulp-uglify": "^1.5.4",
-    "node-sass": "^4.13.0",
-    "require-dir": "^0.3.2",
-    "run-sequence": "^1.2.2",
+    "gulp-notify": "^4.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-tag-version": "^1.3.1",
+    "gulp-uglify": "^3.0.2",
+    "require-dir": "^1.2.0",
+    "run-sequence": "^2.2.1",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "2.0.0",
-    "vinyl-transform": "1.0.0",
-    "watchify": "^3.7.0"
+    "vinyl-source-stream": "^2.0.0",
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^4.0.0"
   },
   "bugs": "https://github.com/TopQuadrant/yate/pulls",
   "keywords": [
@@ -59,10 +58,10 @@
     "Linked Data"
   ],
   "maintainers": [
-   {
-     "name" : "Patrick Doyle",
-     "email": "pdoyle@topquadrant.com"
-   }
+    {
+      "name": "Patrick Doyle",
+      "email": "pdoyle@topquadrant.com"
+    }
   ],
   "contributors": [
     {
@@ -88,8 +87,9 @@
   "dependencies": {
     "clipboard": "^1.7.1",
     "codemirror": "5.17.0",
-    "jquery": "^2.2.4",
+    "jquery": "^3.7.1",
     "prettier": "^1.4.4",
+    "sass": "^1.69.3",
     "yasgui-utils": "^1.6.7"
   },
   "optionalShim": {
